found the fix, contacts section not getting cut off on dashboard

--- a/client/src/pages/Contacts/Contacts.css
+++ b/client/src/pages/Contacts/Contacts.css
@@ -1,5 +1,5 @@
 .contacts-full {
- padding-bottom: 5rem;
+ padding-bottom: 10rem;
 }
 
 .contact-form {
