--- a/client/src/pages/Dashboard/Dashboard.css
+++ b/client/src/pages/Dashboard/Dashboard.css
@@ -73,3 +73,7 @@
   text-align: center;
   text-decoration: underline;
 }
+
+.contact-section-full {
+  padding-bottom: 10rem;
+}
